ui/src/components/CarouselContainer.css
.carousel-wrapper {
    position: relative;
}

.carousel-container {
    position: relative;
    overflow-x: auto;
    overflow-y: hidden;
    scroll-snap-type: x mandatory;
    display: flex;
    flex-direction: row;
    align-items: baseline;
    min-width: 100%;
    min-height: 100%;
}

.carousel-container::-webkit-scrollbar {
    display: none;
}

.carousel-container>* {
    scroll-snap-align: start;
    scroll-snap-stop: always;
}

.carousel-page{
    min-width: 100%;
    min-height: 100%;
    overflow: hidden;
}

.carousel-paginator {
    position: absolute;
    bottom: 0;
    height: 20px;
    width: 100%;

    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

.carousel-page-icon {
    background-color: gray;
    border-radius: 50%;
    width: 8px;
    height: 8px;
    margin: 4px;
}

.carousel-page-icon.active {
    background-color: white;
}

.carousel-navigator {
    position: absolute;
    top: calc(50% - 12px);
    width: 24px;
    height: 24px;
    background-color: white;
    border-radius: 50%;

    display: flex;
    justify-content: center;
    align-items: center;
}

.carousel-navigator.left {
    left: 8px;
}

.carousel-navigator.right {
    right: 8px;
}

